[package]
name = "http-directory-browser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 2 # fast and small wasm

[dependencies]
anyhow = "1.0.81"
wgpu =  { version = "0.19.3", features = ["webgpu"] }
eframe = { version = "0.26.2", features = ["wgpu"] }
egui = "0.26.2"
log = "0.4.21"
tokio = { version = "1.36.0", features = ["rt", "sync"] }
wasm-bindgen-futures = "0.4.42"
suppaftp = { version = "^5.3.0" }
reqwest = "0.12.1"
futures = "0.3.30"
web-sys = { version = "0.3.69", features = ["HtmlAnchorElement"] }
wasm-bindgen = "0.2.92"
